// $Id$

Feeds 7.x 2.0 XXXXXXXXXXXXXXXXXXX
---------------------------------

- #959066 tristanoneil: Remove old mappers and tests.
- #883342 Steven Jones: Don't force usage of cURL.
- #776854 imclean et. al.: Support parsing CSV files without column headers.
- Ian Ward: ensure that arrays of numerics are handled correctly.
- #953728 tristanoneil: Upgrade text formats, use on all processors.
- alex_b: Fix file mapper, add file mapper tests, generate flickr.xml and
  files.csv dynamically.
- #953538 yhahn: Remove BOM from UTF-8 files.
  Adds sanitizeFile() and sanitizeRaw() methods to FeedsFetcherResult.
  Extending classes that override either the getRaw() or getFilePath() methods
  should call these sanitization methods to ensure that the returned output /
  file has been cleaned for parsing.
- #606612 alex_b: More detailed log.
- #949236 Ian Ward, alex_b: Allow mapping empty values to fields.
- #912630 twistor, alex_b: FeedsParserResult: make items accessible for
  modification.
- #933306 alex_b: Fix Feeds creates subscriptions for not existing importers.
- #946822 twistor: FeedsSitemapParser broken: Serialization of
  'SimpleXMLElement' is not allowed.
- #949916 alex_b: Convert values mapped to user->created.
- #949236 Ian Ward: Allow mapping empty values to fields.
- Allow for mapping to list_number field types.
- Fix entity inspection in file fetcher.
- #932772 alex_b: FeedsProcessor: Consolidate process() and clear().
  FeedsProcessor now implements the process() and clear() methods for creating
  and deleting entities. The extending processors FeedsNodeProcessor,
  FeedsTermProcessor and FeedsUserProcessor merely implement entity manipulation
  methods (newEntity(), entityLoad(), entitySave(), entityDeleteMultiple()...).
  This brings features previously only available on FeedsNodeProcessor to all
  entity processors: fast change detection on imported items with hashes,
  batching on process() and clear() and in the case of FeedsUserProcessor, the