@@ -26,16 +26,14 @@ class FeedsMapperLinkTestCase extends FeedsMapperTestCase {
    */
   public function setUp() {
     // Call parent setup with the required module
-    parent::setUp(
-      'feeds', 'feeds_ui', 'ctools', 'job_scheduler', 'content', 'link'
-    );
+    parent::setUp(array('link'));
 
     // Create user and login
     $this->drupalLogin($this->drupalCreateUser(
         array(
           'administer content types',
           'administer feeds',
-          'administer nodes',
+          'bypass node access',
           'administer site configuration',
         )
     ));
@@ -50,32 +48,28 @@ class FeedsMapperLinkTestCase extends FeedsMapperTestCase {
     // Create content type.
     $typename = $this->createContentType(NULL, array(
       'alpha' => array(
-        'type' => 'link',
+        'type' => 'link_field',
         'settings' => array(
-          'title' => 'required',
-          'multiple' =>  '0',
+          'field[settings][title]' => 'required',
         ),
       ),
       'beta' => array(
-        'type' => 'link',
+        'type' => 'link_field',
         'settings' => array(
-          'title' => 'none',
-          'multiple' => '0',
+          'field[settings][title]' => 'none',
         ),
       ),
       'gamma' => array(
-        'type' => 'link',
+        'type' => 'link_field',
         'settings' => array(
-          'title' => 'optional',
-          'multiple' =>  '0',
+          'field[settings][title]' => 'optional',
         ),
       ),
       'omega' => array(
-      'type' => 'link',
+      'type' => 'link_field',
         'settings' => array(
-          'title' => 'value',
-          'title_value' => $static_title,
-          'multiple' =>  '0',
+          'field[settings][title]' => 'value',
+          'field[settings][title_value]' => $static_title,
         ),
       ),
     ));
@@ -148,9 +142,9 @@ class FeedsMapperLinkTestCase extends FeedsMapperTestCase {
    */
   protected function getFormFieldsNames($field_name, $index) {
     if(in_array($field_name, array('alpha', 'beta', 'gamma', 'omega'))) {
-      $fields = array("field_{$field_name}[{$index}][url]");
+      $fields = array("field_{$field_name}[und][{$index}][url]");
       if (in_array($field_name, array('alpha', 'gamma'))) {
-        $fields[] = "field_{$field_name}[{$index}][title]";
+        $fields[] = "field_{$field_name}[und][{$index}][title]";
       }
       return $fields;
     }
@@ -163,7 +157,6 @@ class FeedsMapperLinkTestCase extends FeedsMapperTestCase {
    * Override parent::getFormFieldsValues().
    */
   protected function getFormFieldsValues($field_name, $value) {
-    $field = content_fields($field_name);
     if (in_array($field_name, array('alpha', 'beta', 'gamma', 'omega'))) {
       if (!is_array($value)) {
         $value = array('url' => $value);
